# Dr.doc

./: LTFS_Mahape_Signoff.docx  README.md  TS_LTFS_SoW.docx  api  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pyproject.toml  test-border-fixed-thin.docx
app/: globals.css  page.tsx
app/api/cache/: route.ts
app/builder/: page.tsx
app/firewall/: page.tsx
app/signoff/: page.tsx
app/sow/: page.tsx
drdoc/: __init__.py  __main__.py  generator.py  parser.py
drdoc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
lib/: redis.ts
src/: minimal.ts
src/components/: DynamicForm.tsx  ServerRackModel.tsx  TableInput.tsx  TabletModel.tsx
src/templates/: renderDocument.js
src/utils/: downloadDoc.js  test.ts
tests/: test_cli.py  test_generator.py  test_parser.py
